tracing/probes: Fix to show a parse error for bad type for $comm (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3851,6 +3851,7 @@
 	patches.kernel.org/6.6.18-147-tracing-timerlat-Move-hrtimer_init-to-timerlat.patch
 	patches.kernel.org/6.6.18-148-tracing-Fix-wasted-memory-in-saved_cmdlines-lo.patch
 	patches.kernel.org/6.6.18-149-tracing-synthetic-Fix-trace_string-return-valu.patch
+	patches.kernel.org/6.6.18-150-tracing-probes-Fix-to-show-a-parse-error-for-b.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
