--- a/series.conf
+++ b/series.conf
@@ -3840,6 +3840,7 @@
 	patches.kernel.org/6.6.18-136-modpost-Add-.ltext-and-.ltext.-to-TEXT_SECTION.patch
 	patches.kernel.org/6.6.18-137-usb-typec-tpcm-Fix-issues-with-power-being-rem.patch
 	patches.kernel.org/6.6.18-138-ALSA-hda-realtek-Enable-headset-mic-on-Vaio-VJ.patch
+	patches.kernel.org/6.6.18-139-ALSA-hda-realtek-Add-speaker-pin-verbtable-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
