--- a/series.conf
+++ b/series.conf
@@ -4000,6 +4000,7 @@
 	patches.kernel.org/6.6.18-296-eventfs-Read-ei-entries-before-ei-children-in-.patch
 	patches.kernel.org/6.6.18-297-eventfs-Shortcut-eventfs_iterate-by-skipping-e.patch
 	patches.kernel.org/6.6.18-298-eventfs-Have-the-inodes-all-for-files-and-dire.patch
+	patches.kernel.org/6.6.18-299-eventfs-Do-not-create-dentries-nor-inodes-in-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
