--- a/series.conf
+++ b/series.conf
@@ -3889,6 +3889,7 @@
 	patches.kernel.org/6.6.18-185-powerpc-pseries-fix-accuracy-of-stolen-time.patch
 	patches.kernel.org/6.6.18-186-serial-core-introduce-uart_port_tx_flags.patch
 	patches.kernel.org/6.6.18-187-serial-mxs-auart-fix-tx.patch
+	patches.kernel.org/6.6.18-188-x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-n.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
