--- a/series.conf
+++ b/series.conf
@@ -4023,6 +4023,7 @@
 	patches.kernel.org/6.6.18-319-x86-boot-Omit-compression-buffer-from-PE-COFF-.patch
 	patches.kernel.org/6.6.18-320-x86-boot-Drop-redundant-code-setting-the-root-.patch
 	patches.kernel.org/6.6.18-321-x86-boot-Drop-references-to-startup_64.patch
+	patches.kernel.org/6.6.18-322-x86-boot-Grab-kernel_info-offset-from-zoffset-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
