--- a/series.conf
+++ b/series.conf
@@ -3991,6 +3991,7 @@
 	patches.kernel.org/6.6.18-287-eventfs-Have-event-files-and-directories-defau.patch
 	patches.kernel.org/6.6.18-288-eventfs-Fix-file-and-directory-uid-and-gid-own.patch
 	patches.kernel.org/6.6.18-289-tracefs-Check-for-dentry-d_inode-exists-in-set.patch
+	patches.kernel.org/6.6.18-290-eventfs-Fix-bitwise-fields-for-is_events.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
