--- a/series.conf
+++ b/series.conf
@@ -3852,6 +3852,7 @@
 	patches.kernel.org/6.6.18-148-tracing-Fix-wasted-memory-in-saved_cmdlines-lo.patch
 	patches.kernel.org/6.6.18-149-tracing-synthetic-Fix-trace_string-return-valu.patch
 	patches.kernel.org/6.6.18-150-tracing-probes-Fix-to-show-a-parse-error-for-b.patch
+	patches.kernel.org/6.6.18-151-tracing-probes-Fix-to-set-arg-size-and-fmt-aft.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
