selftests: mptcp: increase timeout to 30 min (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3809,6 +3809,7 @@
 	patches.kernel.org/6.6.18-105-selftests-mptcp-add-missing-kconfig-for-NF-Fil.patch
 	patches.kernel.org/6.6.18-106-selftests-mptcp-add-missing-kconfig-for-NF-Fil.patch
 	patches.kernel.org/6.6.18-107-selftests-mptcp-add-missing-kconfig-for-NF-Man.patch
+	patches.kernel.org/6.6.18-108-selftests-mptcp-increase-timeout-to-30-min.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
