pmdomain: mediatek: fix race conditions with genpd (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3864,6 +3864,7 @@
 	patches.kernel.org/6.6.18-160-iio-imu-adis-ensure-proper-DMA-alignment.patch
 	patches.kernel.org/6.6.18-161-iio-imu-bno055-serdev-requires-REGMAP.patch
 	patches.kernel.org/6.6.18-162-iio-pressure-bmp280-Add-missing-bmp085-to-SPI-.patch
+	patches.kernel.org/6.6.18-163-pmdomain-mediatek-fix-race-conditions-with-gen.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
