mm, mmap: fix vma_merge() case 7 with vma_ops->close (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -1588,6 +1588,7 @@
 	patches.suse/net-mdio-add-2.5g-and-5g-related-PMA-speed-constants.patch
 	patches.suse/net-phy-realtek-use-generic-MDIO-constants.patch
 	patches.suse/net-phy-realtek-add-5Gbps-support-to-rtl822x_config_.patch
+	patches.suse/mm-mmap-fix-vma_merge-case-7-with-vma_ops-close.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
