tracing: Inform kmemleak of saved_cmdlines allocation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16817,6 +16817,7 @@
 	patches.suse/ALSA-hda-realtek-fix-mute-micmute-LED-For-HP-mt645.patch
 	patches.suse/ALSA-usb-audio-More-relaxed-check-of-MIDI-jack-names.patch
 	patches.suse/tracing-Fix-HAVE_DYNAMIC_FTRACE_WITH_REGS-ifdef.patch
+	patches.suse/tracing-Inform-kmemleak-of-saved_cmdlines-allocation.patch
 	patches.suse/tracing-synthetic-Fix-trace_string-return-value.patch
 	patches.suse/nvme-fabrics-fix-I-O-connect-error-handling.patch
 	patches.suse/revert-scsi-fcoe-fix-potential-deadlock-on-fip-ctlr_lock.patch
