HID: wacom: generic: Avoid reporting a serial of '0' to userspace (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16784,6 +16784,7 @@
 	patches.suse/nvme-host-fix-the-updating-of-the-firmware-version.patch
 	patches.suse/x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-not-6.patch
 	patches.suse/HID-wacom-Do-not-register-input-devices-until-after-.patch
+	patches.suse/HID-wacom-generic-Avoid-reporting-a-serial-of-0-to-u.patch
 	patches.suse/net-mlx5-DPLL-Fix-possible-use-after-free-after-dela.patch
 	patches.suse/bonding-do-not-report-NETDEV_XDP_ACT_XSK_ZEROCOPY.patch
 	patches.suse/net-openvswitch-limit-the-number-of-recursions-from-.patch
