selftests: bonding: set active slave to primary eth1 specifically (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16876,6 +16876,7 @@
 	patches.suse/RDMA-qedr-Fix-qedr_create_user_qp-error-flow.patch
 	patches.suse/RDMA-srpt-fix-function-pointer-cast-warnings.patch
 	patches.suse/crypto-virtio-akcipher-Fix-stack-overflow-on-memcpy.patch
+	patches.suse/selftests-bonding-set-active-slave-to-primary-eth1-s.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
