--- a/series.conf
+++ b/series.conf
@@ -16880,6 +16880,7 @@
 	patches.suse/net-phy-realtek-Fix-rtl8211f_config_init-for-RTL8211.patch
 	patches.suse/platform-x86-touchscreen_dmi-Allow-partial-prefix-ma.patch
 	patches.suse/platform-x86-intel-vbtn-Stop-calling-VBDL-from-notif.patch
+	patches.suse/platform-x86-thinkpad_acpi-Only-update-profile-if-su.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
