spi-mxs: Fix chipselect glitch (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16786,6 +16786,7 @@
 	patches.suse/HID-wacom-Do-not-register-input-devices-until-after-.patch
 	patches.suse/HID-wacom-generic-Avoid-reporting-a-serial-of-0-to-u.patch
 	patches.suse/spi-ppc4xx-Drop-write-only-variable.patch
+	patches.suse/spi-mxs-Fix-chipselect-glitch.patch
 	patches.suse/net-mlx5-DPLL-Fix-possible-use-after-free-after-dela.patch
 	patches.suse/bonding-do-not-report-NETDEV_XDP_ACT_XSK_ZEROCOPY.patch
 	patches.suse/net-openvswitch-limit-the-number-of-recursions-from-.patch
