--- a/series.conf
+++ b/series.conf
@@ -16877,6 +16877,7 @@
 	patches.suse/RDMA-srpt-fix-function-pointer-cast-warnings.patch
 	patches.suse/crypto-virtio-akcipher-Fix-stack-overflow-on-memcpy.patch
 	patches.suse/selftests-bonding-set-active-slave-to-primary-eth1-s.patch
+	patches.suse/net-phy-realtek-Fix-rtl8211f_config_init-for-RTL8211.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
