--- a/series.conf
+++ b/series.conf
@@ -16800,6 +16800,7 @@
 	patches.suse/i40e-take-into-account-XDP-Tx-queues-when-stopping-r.patch
 	patches.suse/bnad-fix-work_queue-type-mismatch.patch
 	patches.suse/wifi-mac80211-reload-info-pointer-in-ieee80211_tx_de.patch
+	patches.suse/wifi-iwlwifi-Fix-some-error-codes.patch
 	patches.suse/ice-Add-check-for-lport-extraction-to-LAG-init.patch
 	patches.suse/pppoe-Fix-memory-leak-in-pppoe_sendmsg.patch
 	patches.suse/net-ravb-Count-packets-instead-of-descriptors-in-GbE.patch
