--- a/series.conf
+++ b/series.conf
@@ -16881,6 +16881,7 @@
 	patches.suse/platform-x86-touchscreen_dmi-Allow-partial-prefix-ma.patch
 	patches.suse/platform-x86-intel-vbtn-Stop-calling-VBDL-from-notif.patch
 	patches.suse/platform-x86-thinkpad_acpi-Only-update-profile-if-su.patch
+	patches.suse/selftests-iommu-fix-the-config-fragment.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
