can: netlink: Fix TDCO calculation using the old data bittiming (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16805,6 +16805,7 @@
 	patches.suse/wifi-iwlwifi-mvm-fix-a-crash-when-we-run-out-of-stat.patch
 	patches.suse/ice-Add-check-for-lport-extraction-to-LAG-init.patch
 	patches.suse/can-j1939-Fix-UAF-in-j1939_sk_match_filter-during-se.patch
+	patches.suse/can-netlink-Fix-TDCO-calculation-using-the-old-data-.patch
 	patches.suse/pppoe-Fix-memory-leak-in-pppoe_sendmsg.patch
 	patches.suse/net-ravb-Count-packets-instead-of-descriptors-in-GbE.patch
 	patches.suse/igb-Fix-string-truncation-warnings-in-igb_set_fw_ver.patch
