--- a/series.conf
+++ b/series.conf
@@ -16878,6 +16878,7 @@
 	patches.suse/crypto-virtio-akcipher-Fix-stack-overflow-on-memcpy.patch
 	patches.suse/selftests-bonding-set-active-slave-to-primary-eth1-s.patch
 	patches.suse/net-phy-realtek-Fix-rtl8211f_config_init-for-RTL8211.patch
+	patches.suse/platform-x86-touchscreen_dmi-Allow-partial-prefix-ma.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
