platform/x86: intel-vbtn: Stop calling "VBDL" from notify_handler (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16879,6 +16879,7 @@
 	patches.suse/selftests-bonding-set-active-slave-to-primary-eth1-s.patch
 	patches.suse/net-phy-realtek-Fix-rtl8211f_config_init-for-RTL8211.patch
 	patches.suse/platform-x86-touchscreen_dmi-Allow-partial-prefix-ma.patch
+	patches.suse/platform-x86-intel-vbtn-Stop-calling-VBDL-from-notif.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
