wifi: iwlwifi: mvm: fix a crash when we run out of stations (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16802,6 +16802,7 @@
 	patches.suse/wifi-mac80211-reload-info-pointer-in-ieee80211_tx_de.patch
 	patches.suse/wifi-iwlwifi-Fix-some-error-codes.patch
 	patches.suse/wifi-iwlwifi-uninitialized-variable-in-iwl_acpi_get_.patch
+	patches.suse/wifi-iwlwifi-mvm-fix-a-crash-when-we-run-out-of-stat.patch
 	patches.suse/ice-Add-check-for-lport-extraction-to-LAG-init.patch
 	patches.suse/pppoe-Fix-memory-leak-in-pppoe_sendmsg.patch
 	patches.suse/net-ravb-Count-packets-instead-of-descriptors-in-GbE.patch
