--- a/series.conf
+++ b/series.conf
@@ -45220,6 +45220,7 @@
 	patches.suse/irqchip-gic-v3-its-Fix-GICv4.1-VPE-affinity-update.patch
 	patches.suse/kbuild-Fix-changing-ELF-file-type-for-output-of-gen_.patch
 	patches.suse/modpost-trim-leading-spaces-when-processing-source-f.patch
+	patches.suse/platform-x86-touchscreen_dmi-Allow-partial-prefix-ma.patch
 
 	# tip/tip
 	patches.suse/x86-bugs-Add-asm-helpers-for-executing-VERW.patch
