--- a/series.conf
+++ b/series.conf
@@ -45221,6 +45221,7 @@
 	patches.suse/kbuild-Fix-changing-ELF-file-type-for-output-of-gen_.patch
 	patches.suse/modpost-trim-leading-spaces-when-processing-source-f.patch
 	patches.suse/platform-x86-touchscreen_dmi-Allow-partial-prefix-ma.patch
+	patches.suse/platform-x86-thinkpad_acpi-Only-update-profile-if-su.patch
 
 	# tip/tip
 	patches.suse/x86-bugs-Add-asm-helpers-for-executing-VERW.patch
