--- a/series.conf
+++ b/series.conf
@@ -16866,6 +16866,7 @@
 	patches.suse/RDMA-srpt-Support-specifying-the-srpt_service_guid-p.patch
 	patches.suse/RDMA-qedr-Fix-qedr_create_user_qp-error-flow.patch
 	patches.suse/RDMA-srpt-fix-function-pointer-cast-warnings.patch
+	patches.suse/cachefiles-fix-memory-leak-in-cachefiles_add_cache.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
