ARM: ep93xx: Add terminator to gpiod_lookup_table (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16986,6 +16986,7 @@
 	patches.suse/selftests-iommu-fix-the-config-fragment.patch
 	patches.suse/ata-libata-core-Do-not-try-to-set-sleeping-devices-t.patch
 	patches.suse/ata-ahci_ceva-fix-error-handling-for-Xilinx-GT-PHY-s.patch
+	patches.suse/ARM-ep93xx-Add-terminator-to-gpiod_lookup_table.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
