--- a/series.conf
+++ b/series.conf
@@ -12877,6 +12877,7 @@
 	patches.suse/ice-Remove-redundant-zeroing-of-the-fields.patch
 	patches.suse/ice-Hook-up-4-E830-devices-by-adding-their-IDs.patch
 	patches.suse/net-Add-MDB-get-device-operation.patch
+	patches.suse/selftests-bridge_mdb-Use-MDB-get-instead-of-dump.patch
 	patches.suse/netdevsim-Block-until-all-devices-are-released.patch
 	patches.suse/ipvlan-properly-track-tx_errors.patch
 	patches.suse/tools-ynl-introduce-option-to-process-unknown-attrib.patch
