iio: hid-sensor-als: Return 0 for HID_USAGE_SENSOR_TIME_TIMESTAMP (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16942,6 +16942,7 @@
 	patches.suse/iio-imu-adis-ensure-proper-DMA-alignment.patch
 	patches.suse/iio-adc-ad_sigma_delta-ensure-proper-DMA-alignment.patch
 	patches.suse/staging-iio-ad5933-fix-type-mismatch-regression.patch
+	patches.suse/iio-hid-sensor-als-Return-0-for-HID_USAGE_SENSOR_TIM.patch
 	patches.suse/iio-commom-st_sensors-ensure-proper-DMA-alignment.patch
 	patches.suse/iio-accel-bma400-Fix-a-compilation-problem.patch
 	patches.suse/iio-adc-ad4130-zero-initialize-clock-init-data.patch
