--- a/series.conf
+++ b/series.conf
@@ -16877,6 +16877,7 @@
 	patches.suse/PCI-dwc-Fix-a-64bit-bug-in-dw_pcie_ep_raise_msix_irq.patch
 	patches.suse/scsi-lpfc-Use-unsigned-type-for-num_sge.patch
 	patches.suse/nvme-host-fix-the-updating-of-the-firmware-version.patch
+	patches.suse/nilfs2-fix-data-corruption-in-dsync-block-recovery-f.patch
 	patches.suse/x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-not-6.patch
 	patches.suse/HID-wacom-Do-not-register-input-devices-until-after-.patch
 	patches.suse/HID-wacom-generic-Avoid-reporting-a-serial-of-0-to-u.patch
