--- a/series.conf
+++ b/series.conf
@@ -16827,6 +16827,7 @@
 	patches.suse/usb-dwc3-gadget-Fix-NULL-pointer-dereference-in-dwc3.patch
 	patches.suse/usb-chipidea-core-handle-power-lost-in-workqueue.patch
 	patches.suse/USB-hub-check-for-alternate-port-before-enabling-A_A.patch
+	patches.suse/usb-f_mass_storage-forbid-async-queue-when-shutdown-.patch
 	patches.suse/Revert-usb-typec-tcpm-fix-cc-role-at-port-reset.patch
 	patches.suse/usb-ulpi-Fix-debugfs-directory-leak.patch
 	patches.suse/usb-ucsi-Add-missing-ppm_lock.patch
