media: rc: bpf attach/detach requires write permission (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16930,6 +16930,7 @@
 	patches.suse/revert-scsi-fcoe-fix-potential-deadlock-on-fip-ctlr_lock.patch
 	patches.suse/fnic-move-fnic_fnic_flush_tx-to-a-work-queue.patch
 	patches.suse/media-Revert-media-rkisp1-Drop-IRQF_SHARED.patch
+	patches.suse/media-rc-bpf-attach-detach-requires-write-permission.patch
 	patches.suse/media-ir_toy-fix-a-memleak-in-irtoy_tx.patch
 	patches.suse/thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_CS_5.patch
 	patches.suse/iio-core-fix-memleak-in-iio_device_register_sysfs.patch
