can: j1939: prevent deadlock by changing j1939_socks_lock to rwlock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16901,6 +16901,7 @@
 	patches.suse/wifi-iwlwifi-uninitialized-variable-in-iwl_acpi_get_.patch
 	patches.suse/wifi-iwlwifi-mvm-fix-a-crash-when-we-run-out-of-stat.patch
 	patches.suse/ice-Add-check-for-lport-extraction-to-LAG-init.patch
+	patches.suse/can-j1939-prevent-deadlock-by-changing-j1939_socks_l.patch
 	patches.suse/can-j1939-Fix-UAF-in-j1939_sk_match_filter-during-se.patch
 	patches.suse/can-netlink-Fix-TDCO-calculation-using-the-old-data-.patch
 	patches.suse/pppoe-Fix-memory-leak-in-pppoe_sendmsg.patch
