connector/cn_proc: revert "connector: Fix proc_event_num_listeners count not cleared" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16889,6 +16889,7 @@
 	patches.suse/lan966x-Fix-crash-when-adding-interface-under-a-lag.patch
 	patches.suse/i40e-Do-not-allow-untrusted-VF-to-remove-administrat.patch
 	patches.suse/ionic-minimal-work-with-0-budget.patch
+	patches.suse/connector-cn_proc-revert-connector-Fix-proc_event_nu.patch
 	patches.suse/octeontx2-af-Remove-the-PF_FUNC-validation-for-NPC-t.patch
 	patches.suse/i40e-Fix-waiting-for-queues-of-all-VSIs-to-be-disabl.patch
 	patches.suse/i40e-Fix-wrong-mask-used-during-DCB-config.patch
