--- a/series.conf
+++ b/series.conf
@@ -16870,6 +16870,7 @@
 	patches.suse/netfilter-nft_set_rbtree-skip-end-interval-element-f.patch
 	patches.suse/drm-i915-gvt-Fix-uninitialized-variable-in-handle_mm.patch
 	patches.suse/mmc-sdhci-pci-o2micro-Fix-a-warm-reboot-issue-that-d.patch
+	patches.suse/mmc-slot-gpio-Allow-non-sleeping-GPIO-ro.patch
 	patches.suse/hwmon-aspeed-pwm-tacho-mutex-for-tach-reading.patch
 	patches.suse/hwmon-coretemp-Fix-out-of-bounds-memory-access.patch
 	patches.suse/hwmon-coretemp-Fix-bogus-core_id-to-attr-name-mappin.patch
