--- a/series.conf
+++ b/series.conf
@@ -16934,6 +16934,7 @@
 	patches.suse/media-ir_toy-fix-a-memleak-in-irtoy_tx.patch
 	patches.suse/thunderbolt-Fix-setting-the-CNS-bit-in-ROUTER_CS_5.patch
 	patches.suse/serial-core-introduce-uart_port_tx_flags.patch
+	patches.suse/serial-mxs-auart-fix-tx.patch
 	patches.suse/iio-core-fix-memleak-in-iio_device_register_sysfs.patch
 	patches.suse/iio-pressure-bmp280-Add-missing-bmp085-to-SPI-id-tab.patch
 	patches.suse/iio-magnetometer-rm3100-add-boundary-check-for-the-v.patch
