bus: imx-weim: fix valid range check (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16987,6 +16987,7 @@
 	patches.suse/ata-libata-core-Do-not-try-to-set-sleeping-devices-t.patch
 	patches.suse/ata-ahci_ceva-fix-error-handling-for-Xilinx-GT-PHY-s.patch
 	patches.suse/ARM-ep93xx-Add-terminator-to-gpiod_lookup_table.patch
+	patches.suse/bus-imx-weim-fix-valid-range-check.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
