ata: ahci_ceva: fix error handling for Xilinx GT PHY support (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16985,6 +16985,7 @@
 	patches.suse/platform-x86-thinkpad_acpi-Only-update-profile-if-su.patch
 	patches.suse/selftests-iommu-fix-the-config-fragment.patch
 	patches.suse/ata-libata-core-Do-not-try-to-set-sleeping-devices-t.patch
+	patches.suse/ata-ahci_ceva-fix-error-handling-for-Xilinx-GT-PHY-s.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
