--- a/series.conf
+++ b/series.conf
@@ -16984,6 +16984,7 @@
 	patches.suse/platform-x86-intel-vbtn-Stop-calling-VBDL-from-notif.patch
 	patches.suse/platform-x86-thinkpad_acpi-Only-update-profile-if-su.patch
 	patches.suse/selftests-iommu-fix-the-config-fragment.patch
+	patches.suse/ata-libata-core-Do-not-try-to-set-sleeping-devices-t.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
