--- a/series.conf
+++ b/series.conf
@@ -16988,6 +16988,7 @@
 	patches.suse/ata-ahci_ceva-fix-error-handling-for-Xilinx-GT-PHY-s.patch
 	patches.suse/ARM-ep93xx-Add-terminator-to-gpiod_lookup_table.patch
 	patches.suse/bus-imx-weim-fix-valid-range-check.patch
+	patches.suse/i2c-imx-when-being-a-target-mark-the-last-read-as-pr.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
