--- a/series.conf
+++ b/series.conf
@@ -16984,6 +16984,7 @@
 	patches.suse/platform-x86-intel-vbtn-Stop-calling-VBDL-from-notif.patch
 	patches.suse/platform-x86-thinkpad_acpi-Only-update-profile-if-su.patch
 	patches.suse/selftests-iommu-fix-the-config-fragment.patch
+	patches.suse/md-Don-t-ignore-suspended-array-in-md_check_recovery-1baa.patch
 	patches.suse/ata-libata-core-Do-not-try-to-set-sleeping-devices-t.patch
 	patches.suse/ata-ahci_ceva-fix-error-handling-for-Xilinx-GT-PHY-s.patch
 	patches.suse/ARM-ep93xx-Add-terminator-to-gpiod_lookup_table.patch
