md: Don't ignore read-only array in md_check_recovery() (bsc#1219596).

--- a/series.conf
+++ b/series.conf
@@ -16985,6 +16985,7 @@
 	patches.suse/platform-x86-thinkpad_acpi-Only-update-profile-if-su.patch
 	patches.suse/selftests-iommu-fix-the-config-fragment.patch
 	patches.suse/md-Don-t-ignore-suspended-array-in-md_check_recovery-1baa.patch
+	patches.suse/md-Don-t-ignore-read-only-array-in-md_check_recovery-55a4.patch
 	patches.suse/ata-libata-core-Do-not-try-to-set-sleeping-devices-t.patch
 	patches.suse/ata-ahci_ceva-fix-error-handling-for-Xilinx-GT-PHY-s.patch
 	patches.suse/ARM-ep93xx-Add-terminator-to-gpiod_lookup_table.patch
