drm/amd: Stop evicting resources on APUs in suspend (https://gitlab.freedesktop.org/drm/amd/-/issues/3132).

--- a/series.conf
+++ b/series.conf
@@ -1871,6 +1871,7 @@
 	# sorted patches
 	########################################################
 	patches.suse/af_unix-Fix-task-hung-while-purging-oob_skb-in-GC.patch
+	patches.suse/drm-amd-Stop-evicting-resources-on-APUs-in-suspend.patch
 
 	########################################################
 	# end of sorted patches
