drm/amdgpu: Fix the runtime resume failure issue (https://gitlab.freedesktop.org/drm/amd/-/issues/3132).

--- a/series.conf
+++ b/series.conf
@@ -1872,6 +1872,7 @@
 	########################################################
 	patches.suse/af_unix-Fix-task-hung-while-purging-oob_skb-in-GC.patch
 	patches.suse/drm-amd-Stop-evicting-resources-on-APUs-in-suspend.patch
+	patches.suse/drm-amdgpu-Fix-the-runtime-resume-failure-issue.patch
 
 	########################################################
 	# end of sorted patches
