--- a/series.conf
+++ b/series.conf
@@ -13419,6 +13419,7 @@
 	patches.suse/PCI-sysfs-Protect-driver-s-D3cold-preference-from-us.patch
 	patches.suse/x86-PCI-Avoid-PME-from-D3hot-D3cold-for-AMD-Rembrand.patch
 	patches.suse/PCI-Lengthen-reset-delay-for-VideoPropulsion-Torrent.patch
+	patches.suse/0002-PCI-Add-pci_is_vga-helper.patch
 	patches.suse/PCI-dwc-Add-host_post_init-callback.patch
 	patches.suse/PCI-qcom-Enable-ASPM-for-platforms-supporting-1.9.0-.patch
 	patches.suse/PCI-qcom-ep-Add-dedicated-callback-for-writing-to-DB.patch
