usb: cdnsp: fixed issue with incorrect detecting CDNSP family controllers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16992,6 +16992,7 @@
 	patches.suse/PCI-MSI-Prevent-MSI-hardware-interrupt-number-trunca.patch
 	patches.suse/serial-amba-pl011-Fix-DMA-transmission-in-RS485-mode.patch
 	patches.suse/usb-cdnsp-blocked-some-cdns3-specific-code.patch
+	patches.suse/usb-cdnsp-fixed-issue-with-incorrect-detecting-CDNSP.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
