--- a/series.conf
+++ b/series.conf
@@ -16991,6 +16991,7 @@
 	patches.suse/i2c-imx-when-being-a-target-mark-the-last-read-as-pr.patch
 	patches.suse/PCI-MSI-Prevent-MSI-hardware-interrupt-number-trunca.patch
 	patches.suse/serial-amba-pl011-Fix-DMA-transmission-in-RS485-mode.patch
+	patches.suse/usb-cdnsp-blocked-some-cdns3-specific-code.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
