--- a/series.conf
+++ b/series.conf
@@ -17001,6 +17001,7 @@
 	patches.suse/usb-gadget-omap_udc-fix-USB-gadget-regression-on-Pal.patch
 	patches.suse/Revert-usb-typec-tcpm-reset-counter-when-enter-into-.patch
 	patches.suse/usb-gadget-ncm-Avoid-dropping-datagrams-of-properly-.patch
+	patches.suse/usb-typec-tpcm-Fix-issues-with-power-being-removed-d.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
