Revert "usb: typec: tcpm: reset counter when enter into unattached state after try role" (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16999,6 +16999,7 @@
 	patches.suse/usb-cdns3-fix-memory-double-free-when-handle-zero-pa.patch
 	patches.suse/usb-dwc3-gadget-Don-t-disconnect-if-not-started.patch
 	patches.suse/usb-gadget-omap_udc-fix-USB-gadget-regression-on-Pal.patch
+	patches.suse/Revert-usb-typec-tcpm-reset-counter-when-enter-into-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
