usb: gadget: ncm: Avoid dropping datagrams of properly parsed NTBs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -17000,6 +17000,7 @@
 	patches.suse/usb-dwc3-gadget-Don-t-disconnect-if-not-started.patch
 	patches.suse/usb-gadget-omap_udc-fix-USB-gadget-regression-on-Pal.patch
 	patches.suse/Revert-usb-typec-tcpm-reset-counter-when-enter-into-.patch
+	patches.suse/usb-gadget-ncm-Avoid-dropping-datagrams-of-properly-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
