--- a/series.conf
+++ b/series.conf
@@ -16994,6 +16994,7 @@
 	patches.suse/usb-cdnsp-blocked-some-cdns3-specific-code.patch
 	patches.suse/usb-cdnsp-fixed-issue-with-incorrect-detecting-CDNSP.patch
 	patches.suse/usb-roles-fix-NULL-pointer-issue-when-put-module-s-r.patch
+	patches.suse/usb-roles-don-t-get-set_role-when-usb_role_switch-is.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
