usb: gadget: omap_udc: fix USB gadget regression on Palm TE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16998,6 +16998,7 @@
 	patches.suse/usb-cdns3-fixed-memory-use-after-free-at-cdns3_gadge.patch
 	patches.suse/usb-cdns3-fix-memory-double-free-when-handle-zero-pa.patch
 	patches.suse/usb-dwc3-gadget-Don-t-disconnect-if-not-started.patch
+	patches.suse/usb-gadget-omap_udc-fix-USB-gadget-regression-on-Pal.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
