usb: roles: fix NULL pointer issue when put module's reference (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16993,6 +16993,7 @@
 	patches.suse/serial-amba-pl011-Fix-DMA-transmission-in-RS485-mode.patch
 	patches.suse/usb-cdnsp-blocked-some-cdns3-specific-code.patch
 	patches.suse/usb-cdnsp-fixed-issue-with-incorrect-detecting-CDNSP.patch
+	patches.suse/usb-roles-fix-NULL-pointer-issue-when-put-module-s-r.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
