--- a/series.conf
+++ b/series.conf
@@ -16995,6 +16995,7 @@
 	patches.suse/usb-cdnsp-fixed-issue-with-incorrect-detecting-CDNSP.patch
 	patches.suse/usb-roles-fix-NULL-pointer-issue-when-put-module-s-r.patch
 	patches.suse/usb-roles-don-t-get-set_role-when-usb_role_switch-is.patch
+	patches.suse/usb-cdns3-fixed-memory-use-after-free-at-cdns3_gadge.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
