PCI/MSI: Prevent MSI hardware interrupt number truncation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16989,6 +16989,7 @@
 	patches.suse/ARM-ep93xx-Add-terminator-to-gpiod_lookup_table.patch
 	patches.suse/bus-imx-weim-fix-valid-range-check.patch
 	patches.suse/i2c-imx-when-being-a-target-mark-the-last-read-as-pr.patch
+	patches.suse/PCI-MSI-Prevent-MSI-hardware-interrupt-number-trunca.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
