--- a/series.conf
+++ b/series.conf
@@ -16997,6 +16997,7 @@
 	patches.suse/usb-roles-don-t-get-set_role-when-usb_role_switch-is.patch
 	patches.suse/usb-cdns3-fixed-memory-use-after-free-at-cdns3_gadge.patch
 	patches.suse/usb-cdns3-fix-memory-double-free-when-handle-zero-pa.patch
+	patches.suse/usb-dwc3-gadget-Don-t-disconnect-if-not-started.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
