serial: amba-pl011: Fix DMA transmission in RS485 mode (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16990,6 +16990,7 @@
 	patches.suse/bus-imx-weim-fix-valid-range-check.patch
 	patches.suse/i2c-imx-when-being-a-target-mark-the-last-read-as-pr.patch
 	patches.suse/PCI-MSI-Prevent-MSI-hardware-interrupt-number-trunca.patch
+	patches.suse/serial-amba-pl011-Fix-DMA-transmission-in-RS485-mode.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
