--- a/series.conf
+++ b/series.conf
@@ -16679,6 +16679,7 @@
 	patches.suse/fjes-fix-memleaks-in-fjes_hw_setup.patch
 	patches.suse/netfilter-nf_tables-reject-QUEUE-DROP-verdict-parame.patch
 	patches.suse/selftests-bonding-do-not-test-arp-ns-target-with-mod.patch
+	patches.suse/net-fec-fix-the-unhandled-context-fault-from-smmu.patch
 	patches.suse/xsk-make-xsk_buff_pool-responsible-for-clearing-xdp_.patch
 	patches.suse/ice-work-on-pre-XDP-prog-frag-count.patch
 	patches.suse/i40e-handle-multi-buffer-packets-that-are-shrunk-by-.patch
