--- a/series.conf
+++ b/series.conf
@@ -16750,6 +16750,7 @@
 	patches.suse/HID-bpf-actually-free-hdev-memory-after-attaching-a-.patch
 	patches.suse/gve-Fix-skb-truesize-underestimation.patch
 	patches.suse/nfp-flower-add-hardware-offload-check-for-post-ct-en.patch
+	patches.suse/nfp-flower-fix-hardware-offload-for-the-transfer-lay.patch
 	patches.suse/bnxt_en-Make-PTP-timestamp-HWRM-more-silent.patch
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
 	patches.suse/e1000e-correct-maximum-frequency-adjustment-values.patch
