--- a/series.conf
+++ b/series.conf
@@ -16753,6 +16753,7 @@
 	patches.suse/nfp-flower-fix-hardware-offload-for-the-transfer-lay.patch
 	patches.suse/bnxt_en-Make-PTP-timestamp-HWRM-more-silent.patch
 	patches.suse/net-dsa-mt7530-fix-10M-100M-speed-on-MT7988-switch.patch
+	patches.suse/net-lan966x-Fix-port-configuration-when-using-SGMII-.patch
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
 	patches.suse/e1000e-correct-maximum-frequency-adjustment-values.patch
 	patches.suse/ixgbe-Fix-an-error-handling-path-in-ixgbe_read_iosf_.patch
