--- a/series.conf
+++ b/series.conf
@@ -16755,6 +16755,7 @@
 	patches.suse/net-dsa-mt7530-fix-10M-100M-speed-on-MT7988-switch.patch
 	patches.suse/net-lan966x-Fix-port-configuration-when-using-SGMII-.patch
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
+	patches.suse/net-dsa-qca8k-fix-illegal-usage-of-GPIO.patch
 	patches.suse/e1000e-correct-maximum-frequency-adjustment-values.patch
 	patches.suse/ixgbe-Fix-an-error-handling-path-in-ixgbe_read_iosf_.patch
 	patches.suse/octeontx2-pf-Remove-xdp-queues-on-program-detach.patch
