--- a/series.conf
+++ b/series.conf
@@ -16759,6 +16759,7 @@
 	patches.suse/net-stmmac-do-not-clear-TBS-enable-bit-on-link-up-do.patch
 	patches.suse/e1000e-correct-maximum-frequency-adjustment-values.patch
 	patches.suse/ixgbe-Fix-an-error-handling-path-in-ixgbe_read_iosf_.patch
+	patches.suse/net-dsa-mv88e6xxx-Fix-failed-probe-due-to-unsupporte.patch
 	patches.suse/octeontx2-pf-Remove-xdp-queues-on-program-detach.patch
 	patches.suse/msft-hv-2940-hv_netvsc-Fix-race-condition-between-netvsc_probe-an.patch
 	patches.suse/idpf-avoid-compiler-padding-in-virtchnl2_ptype-struc.patch
