powerpc: export MIN RMA size (bsc#1236743 ltc#211409).

--- a/series.conf
+++ b/series.conf
@@ -34517,6 +34517,9 @@
 	patches.suse/watchdog-mpc8xxx_wdt-Reload-the-watchdog-timer-when-.patch
 	patches.suse/ACPI-NFIT-Fix-incorrect-ndr_desc-being-reportedin-de.patch
 
+	# out-of-tree patches
+	patches.suse/powerpc-export-MIN-RMA-size.patch
+
 	########################################################
 	# end of sorted patches
 	########################################################
