powerpc: increase MIN RMA size for CAS negotiation (bsc#1236743 ltc#211409 bsc#1252269 ltc#215957).

--- a/series.conf
+++ b/series.conf
@@ -34519,6 +34519,7 @@
 
 	# out-of-tree patches
 	patches.suse/powerpc-export-MIN-RMA-size.patch
+	patches.suse/powerpc-increase-MIN-RMA-size-for-CAS-negotiation.patch
 
 	########################################################
 	# end of sorted patches
