--- a/series.conf
+++ b/series.conf
@@ -54289,6 +54289,7 @@
 	patches.suse/soc-qcom-fix-endianness-for-QMI-header.patch
 	patches.suse/soc-qcom-pmic_glink-fix-OF-node-leak.patch
 	patches.suse/Docs-ABI-Fix-sysfs-kernel-address_bits-path.patch
+	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
 	patches.suse/wifi-ath12k-Pass-ab-pointer-directly-to-ath12k_dp_tx.patch
 	patches.suse/wifi-rtw89-avoid-NULL-dereference-when-RX-problemati.patch
 	patches.suse/wifi-rtl818x-Kill-URBs-before-clearing-tx-status-que.patch
