mm/memcontrol: export memcg.swap watermark via sysfs for v2 memcg (jsc#PED-12551).

--- a/series.conf
+++ b/series.conf
@@ -923,6 +923,7 @@
 	patches.suse/mm-compaction-add-trace-event-for-fast-freepages-isolation.patch
 	patches.suse/mm-compaction-skip-fast-freepages-isolation-if-enough-freepages-are-isolated.patch
 	patches.suse/mm-shmem-fix-UAF-bug-in-shmem_show_options.patch
+	patches.suse/mm-memcontrol-export-memcg.swap-watermark-via-sysfs-for-v2.patch
 	patches.suse/maple_tree-rework-mtree_alloc_-range-rrange.patch
 	patches.suse/maple_tree-drop-mas_-rev_-alloc-and-mas_fill_gap.patch
 	patches.suse/maple_tree-fix-the-arguments-to-__must_hold.patch
