platform/x86: hp-bioscfg: Simplify return check in hp_add_other_attributes() (jsc#PED-13019).

--- a/series.conf
+++ b/series.conf
@@ -20677,6 +20677,7 @@
 	patches.suse/x86-acpi-Ignore-invalid-x2APIC-entries.patch
 	patches.suse/irqchip-gic-v3-its-Flush-ITS-tables-correctly-in-non.patch
 	patches.suse/kconfig-fix-memory-leak-from-range-properties.patch
+	patches.suse/platform-x86-hp-bioscfg-Simplify-return-check-in-hp_.patch
 	patches.suse/platform-x86-amd-pmc-adjust-getting-DRAM-size-behavi.patch
 	patches.suse/platform-x86-intel_telemetry-Fix-kernel-doc-descript.patch
 	patches.suse/asm-generic-qspinlock-fix-queued_spin_value_unlocked.patch
