- platform/x86: hp-bioscfg: Makefile (jsc#PED-13019). - Update config files. (HP_BIOSCFG=m) - supported.conf: add it

--- a/series.conf
+++ b/series.conf
@@ -12055,6 +12055,7 @@
 	patches.suse/platform-x86-hp-bioscfg-spmobj-attributes.patch
 	patches.suse/platform-x86-hp-bioscfg-string-attributes.patch
 	patches.suse/platform-x86-hp-bioscfg-surestart-attributes.patch
+	patches.suse/platform-x86-hp-bioscfg-Makefile.patch
 	patches.suse/platform-x86-intel-tpmi-Read-feature-control-status.patch
 	patches.suse/platform-x86-intel-tpmi-Add-debugfs-interface.patch
 	patches.suse/doc-TPMI-Add-debugfs-documentation.patch
