--- a/supported.conf
+++ b/supported.conf
@@ -3968,6 +3968,7 @@
 -		drivers/platform/x86/gigabyte-wmi
 -		drivers/platform/x86/gpd-pocket-fan
 -		drivers/platform/x86/hdaps
+		drivers/platform/x86/hp/hp-bioscfg/hp-bioscfg
 		drivers/platform/x86/hp/hp-wireless
 		drivers/platform/x86/hp/hp-wmi
 		drivers/platform/x86/hp/hp_accel				# HP 3D DriveGuard (FATE #306448)
