platform/x86: hp-bioscfg: Update steps order list elements are evaluated (jsc#PED-13019).

--- a/series.conf
+++ b/series.conf
@@ -12081,6 +12081,7 @@
 	patches.suse/tools-power-x86-intel-speed-select-Change-mem-freque.patch
 	patches.suse/tools-power-x86-intel-speed-select-v1.17-release.patch
 	patches.suse/platform-x86-amd-pmf-Use-str_on_off-helper.patch
+	patches.suse/platform-x86-hp-bioscfg-Update-steps-order-list-elem.patch
 	patches.suse/platform-x86-amd-pmc-Move-PMC-driver-to-separate-dir.patch
 	patches.suse/mlxbf-bootctl-Support-sysfs-entries-for-MFG-fields.patch
 	patches.suse/platform-mellanox-Cosmetic-changes.patch
