--- a/series.conf
+++ b/series.conf
@@ -12063,6 +12063,7 @@
 	patches.suse/platform-x86-hp-bioscfg-prevent-a-small-buffer-overf.patch
 	patches.suse/platform-x86-hp-bioscfg-fix-error-reporting-in-hp_ad.patch
 	patches.suse/platform-x86-hp-bioscfg-Fix-memory-leaks-in-attribut.patch
+	patches.suse/platform-x86-hp-bioscfg-Fix-uninitialized-variable-e.patch
 	patches.suse/platform-x86-dell-sysman-Fix-reference-leak.patch
 	patches.suse/mlxbf-bootctl-Support-the-large-icmc-write-read.patch
 	patches.suse/mlxbf-bootctl-Support-setting-the-ARM-boot-state-to-OS-up.patch
