--- a/series.conf
+++ b/series.conf
@@ -20678,6 +20678,7 @@
 	patches.suse/irqchip-gic-v3-its-Flush-ITS-tables-correctly-in-non.patch
 	patches.suse/kconfig-fix-memory-leak-from-range-properties.patch
 	patches.suse/platform-x86-hp-bioscfg-Simplify-return-check-in-hp_.patch
+	patches.suse/platform-x86-hp-bioscfg-move-mutex_lock-down-in-hp_a.patch
 	patches.suse/platform-x86-amd-pmc-adjust-getting-DRAM-size-behavi.patch
 	patches.suse/platform-x86-intel_telemetry-Fix-kernel-doc-descript.patch
 	patches.suse/asm-generic-qspinlock-fix-queued_spin_value_unlocked.patch
