platform/x86: hp-bioscfg: order-list-attributes (jsc#PED-13019).

--- a/series.conf
+++ b/series.conf
@@ -12050,6 +12050,7 @@
 	patches.suse/platform-x86-hp-bioscfg-biosattr-interface.patch
 	patches.suse/platform-x86-hp-bioscfg-enum-attributes.patch
 	patches.suse/platform-x86-hp-bioscfg-int-attributes.patch
+	patches.suse/platform-x86-hp-bioscfg-order-list-attributes.patch
 	patches.suse/platform-x86-intel-tpmi-Read-feature-control-status.patch
 	patches.suse/platform-x86-intel-tpmi-Add-debugfs-interface.patch
 	patches.suse/doc-TPMI-Add-debugfs-documentation.patch
