platform/x86: hp-bioscfg: Remove duplicate use of variable in inner loop (jsc#PED-13019).

--- a/series.conf
+++ b/series.conf
@@ -12069,6 +12069,7 @@
 	patches.suse/platform-x86-hp-bioscfg-Change-how-order-list-size-i.patch
 	patches.suse/platform-x86-hp-bioscfg-Change-how-enum-possible-val.patch
 	patches.suse/platform-x86-hp-bioscfg-Change-how-password-encoding.patch
+	patches.suse/platform-x86-hp-bioscfg-Remove-duplicate-use-of-vari.patch
 	patches.suse/platform-x86-dell-sysman-Fix-reference-leak.patch
 	patches.suse/mlxbf-bootctl-Support-the-large-icmc-write-read.patch
 	patches.suse/mlxbf-bootctl-Support-setting-the-ARM-boot-state-to-OS-up.patch
