platform/x86: hp-bioscfg: Removed needless asm-generic (jsc#PED-13019).

--- a/series.conf
+++ b/series.conf
@@ -22104,6 +22104,7 @@
 	patches.suse/platform-x86-intel-pmc-Add-ssram_init-flag-in-PMC-di.patch
 	patches.suse/platform-x86-intel-pmc-Add-Arrow-Lake-S-support-to-i.patch
 	patches.suse/platform-x86-intel-pmc-Add-Lunar-Lake-M-support-to-i.patch
+	patches.suse/platform-x86-hp-bioscfg-Removed-needless-asm-generic.patch
 	patches.suse/platform-x86-intel-uncore-freq-Add-additional-client-processors.patch
 	patches.suse/platform-x86-intel-pmc-arl-Add-GBE-LTR-ignore-during.patch
 	patches.suse/platform-x86-intel-pmc-lnl-Add-GBE-LTR-ignore-during.patch
