platform/x86: hp-bioscfg: Remove unused obj in hp_add_other_attributes() (jsc#PED-13019).

--- a/series.conf
+++ b/series.conf
@@ -20680,6 +20680,7 @@
 	patches.suse/platform-x86-hp-bioscfg-Simplify-return-check-in-hp_.patch
 	patches.suse/platform-x86-hp-bioscfg-move-mutex_lock-down-in-hp_a.patch
 	patches.suse/platform-x86-hp-bioscfg-Fix-error-handling-in-hp_add.patch
+	patches.suse/platform-x86-hp-bioscfg-Remove-unused-obj-in-hp_add_.patch
 	patches.suse/platform-x86-amd-pmc-adjust-getting-DRAM-size-behavi.patch
 	patches.suse/platform-x86-intel_telemetry-Fix-kernel-doc-descript.patch
 	patches.suse/asm-generic-qspinlock-fix-queued_spin_value_unlocked.patch
