platform/x86: hp-bioscfg: Change how prerequisites size is evaluated (jsc#PED-13019).

--- a/series.conf
+++ b/series.conf
@@ -12065,6 +12065,7 @@
 	patches.suse/platform-x86-hp-bioscfg-Fix-memory-leaks-in-attribut.patch
 	patches.suse/platform-x86-hp-bioscfg-Fix-uninitialized-variable-e.patch
 	patches.suse/platform-x86-hp-bioscfg-Replace-the-word-HACK-from-s.patch
+	patches.suse/platform-x86-hp-bioscfg-Change-how-prerequisites-siz.patch
 	patches.suse/platform-x86-dell-sysman-Fix-reference-leak.patch
 	patches.suse/mlxbf-bootctl-Support-the-large-icmc-write-read.patch
 	patches.suse/mlxbf-bootctl-Support-setting-the-ARM-boot-state-to-OS-up.patch
