platform/x86: hp-bioscfg: Fix reference leak (jsc#PED-13019).

--- a/series.conf
+++ b/series.conf
@@ -14165,6 +14165,7 @@
 	patches.suse/btrfs-error-when-COWing-block-from-a-root-that-is-be.patch
 	patches.suse/btrfs-error-out-when-reallocating-block-for-defrag-u.patch
 	patches.suse/platform-x86-think-lmi-Fix-reference-leak.patch
+	patches.suse/platform-x86-hp-bioscfg-Fix-reference-leak.patch
 	patches.suse/platform-x86-intel-ifs-release-cpus_read_lock.patch
 	patches.suse/platform-mellanox-tmfifo-fix-kernel-doc-warnings.patch
 	patches.suse/platform-x86-touchscreen_dmi-Add-info-for-the-BUSH-B.patch
