--- a/series.conf
+++ b/series.conf
@@ -12054,6 +12054,7 @@
 	patches.suse/platform-x86-hp-bioscfg-passwdobj-attributes.patch
 	patches.suse/platform-x86-hp-bioscfg-spmobj-attributes.patch
 	patches.suse/platform-x86-hp-bioscfg-string-attributes.patch
+	patches.suse/platform-x86-hp-bioscfg-surestart-attributes.patch
 	patches.suse/platform-x86-intel-tpmi-Read-feature-control-status.patch
 	patches.suse/platform-x86-intel-tpmi-Add-debugfs-interface.patch
 	patches.suse/doc-TPMI-Add-debugfs-documentation.patch
