fs/mpage: use blocks_per_folio instead of blocks_per_page (bsc#1245219).

--- a/series.conf
+++ b/series.conf
@@ -6442,6 +6442,7 @@
 	patches.suse/make-use-of-anon_inode_getfile_fmode.patch
 	patches.suse/watch_queue-fix-pipe-accounting-mismatch.patch
 	patches.suse/fs-mpage-avoid-negative-shift-for-large-blocksize.patch
+	patches.suse/fs-mpage-use-blocks_per_folio-instead-of-blocks_per_page.patch
 	patches.suse/block-bdev-enable-large-folio-support-for-large-logical-bl.patch
 	patches.suse/init-add-initramfs_internal.h.patch
 	patches.suse/initramfs-allocate-heap-buffers-together.patch
