mm/memory_hotplug: replace an open-coded kmemdup() in (bsc#1235515,jsc#PED-12731).

--- a/series.conf
+++ b/series.conf
@@ -21879,6 +21879,7 @@
 	patches.suse/0005-cgroup-cpuset-Expose-cpuset.cpus.isolated.patch
 	patches.suse/0006-cgroup-cpuset-Include-isolated-cpuset-CPUs-in-cpu_is_isolated-check.patch
 	patches.suse/cgroup-Move-rcu_head-up-near-the-top-of-cgroup_root.patch
+	patches.suse/mm-memory_hotplug-replace-an-open-coded-kmemdup-in-a.patch
 	patches.suse/dax-kmem-allow-kmem-to-add-memory-with-memmap_on_mem-4eca.patch
 	patches.suse/zram-split-memory-tracking-and-ac-time-tracking.patch
 	patches.suse/memory-failure-use-a-folio-in-me_huge_page.patch
