--- a/series.conf
+++ b/series.conf
@@ -31886,6 +31886,7 @@
 	patches.suse/readahead-use-ilog2-instead-of-a-while-loop-in-page_.patch
 	patches.suse/dax-bus.c-replace-driver-core-lock-usage-by-a-local--c05a.patch
 	patches.suse/dax-bus.c-replace-several-sprintf-with-sysfs_emit-6ebe.patch
+	patches.suse/Documentatiion-ABI-add-ABI-documentation-for-sys-bus.patch
 	patches.suse/mm-memcg-don-t-periodically-flush-stats-when-memcg-is-disabled.patch
 	patches.suse/mm-memcg-use-larger-batches-for-proactive-reclaim.patch
 	patches.suse/kasan-test-avoid-gcc-warning-for-intentional-overflo.patch
