mm/memory_hotplug: export mhp_supports_memmap_on_memory() (bsc#1235515,jsc#PED-12731).

--- a/series.conf
+++ b/series.conf
@@ -31887,6 +31887,7 @@
 	patches.suse/dax-bus.c-replace-driver-core-lock-usage-by-a-local--c05a.patch
 	patches.suse/dax-bus.c-replace-several-sprintf-with-sysfs_emit-6ebe.patch
 	patches.suse/Documentatiion-ABI-add-ABI-documentation-for-sys-bus.patch
+	patches.suse/mm-memory_hotplug-export-mhp_supports_memmap_on_memo.patch
 	patches.suse/mm-memcg-don-t-periodically-flush-stats-when-memcg-is-disabled.patch
 	patches.suse/mm-memcg-use-larger-batches-for-proactive-reclaim.patch
 	patches.suse/kasan-test-avoid-gcc-warning-for-intentional-overflo.patch
