- usb: typec: ucsi: fix Clang -Wsign-conversion warning   (git-fixes). - Refresh patches.suse/paddings-add-paddings-to-TypeC-stuff.patch.

--- a/series.conf
+++ b/series.conf
@@ -32510,6 +32510,7 @@
 	patches.suse/serial-Fix-potential-null-ptr-deref-in-mlb_usio_prob.patch
 	patches.suse/vt-remove-VT_RESIZE-and-VT_RESIZEX-from-vt_compat_io.patch
 	patches.suse/usb-renesas_usbhs-Reorder-clock-handling-and-power-m.patch
+	patches.suse/usb-typec-ucsi-fix-Clang-Wsign-conversion-warning.patch
 	patches.suse/thunderbolt-Do-not-double-dequeue-a-configuration-re.patch
 	patches.suse/thunderbolt-Fix-a-logic-error-in-wake-on-connect.patch
 	patches.suse/usb-typec-tcpm-tcpci_maxim-Fix-bounds-check-in-proce.patch
