usb: dwc3: gadget: Make gadget_wakeup asynchronous (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32118,6 +32118,7 @@
 	patches.suse/usb-host-tegra-Prevent-host-controller-crash-when-OT.patch
 	patches.suse/usb-gadget-f_ecm-Add-get_status-callback.patch
 	patches.suse/usb-gadget-Use-get_status-callback-to-set-remote-wak.patch
+	patches.suse/usb-dwc3-gadget-Make-gadget_wakeup-asynchronous.patch
 	patches.suse/usb-uhci-platform-Make-the-clock-really-optional.patch
 	patches.suse/usb-typec-ucsi-displayport-Fix-deadlock.patch
 	patches.suse/usb-typec-ucsi-displayport-Fix-NULL-pointer-access.patch
