--- a/series.conf
+++ b/series.conf
@@ -9233,6 +9233,7 @@
 	patches.suse/net-fix-udp-gso-skb_segment-after-pull-from-frag_lis.patch
 	patches.suse/net-wwan-t7xx-Fix-napi-rx-poll-issue.patch
 	patches.suse/net-wwan-mhi_wwan_mbim-use-correct-mux_id-for-multip.patch
+	patches.suse/netfilter-nf_set_pipapo_avx2-fix-initial-map-fill.patch
 	patches.suse/PM-sleep-Fix-power.is_suspended-cleanup-for-direct-c.patch
 	patches.suse/drm-i915-gem-Allow-EXEC_CAPTURE-on-recoverable-conte.patch
 	patches.suse/drm-xe-Make-xe_gt_freq-part-of-the-Documentation.patch
