--- a/series.conf
+++ b/series.conf
@@ -8904,6 +8904,7 @@
 	patches.suse/net-ibmveth-Reset-the-adapter-when-unexpected-states.patch
 	patches.suse/net-ibmveth-added-KUnit-tests-for-some-buffer-pool-f.patch
 	patches.suse/netfilter-bridge-Move-specific-fragmented-packet-to-slow_p.patch
+	patches.suse/netfilter-nft_quota-match-correctly-when-the-quota-just-de.patch
 	patches.suse/wifi-ath12k-refactor-ath12k_hw_regs-structure.patch
 	patches.suse/wifi-ath11k-determine-PM-policy-based-on-machine-mod.patch
 	patches.suse/wifi-ath11k-introduce-ath11k_core_continue_suspend_r.patch
