netfilter: nft_set_hash: GC reaps elements with conncount for dynamic sets only (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7876,6 +7876,7 @@
 	patches.suse/e1000e-change-k1-configuration-on-MTP-and-later-plat.patch
 	patches.suse/ixgbe-fix-media-type-detection-for-E610-device.patch
 	patches.suse/idpf-fix-adapter-NULL-pointer-dereference-on-reboot.patch
+	patches.suse/netfilter-nft_set_hash-GC-reaps-elements-with-conncount-fo.patch
 	patches.suse/netfilter-nf_tables-don-t-unregister-hook-when-table-is-do.patch
 	patches.suse/netfilter-nft_tunnel-fix-geneve_opt-type-confusion-additio.patch
 	patches.suse/usbnet-fix-NPE-during-rx_complete.patch
