netfilter: conntrack: Bound nf_conntrack sysctl writes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7066,6 +7066,7 @@
 	patches.suse/wifi-mt76-mt7996-fix-SER-reset-trigger-on-WED-reset.patch
 	patches.suse/wifi-mt76-only-mark-tx-status-failed-frames-as-ACKed.patch
 	patches.suse/wifi-mt76-mt76x2u-add-TP-Link-TL-WDN6200-ID-to-devic.patch
+	patches.suse/netfilter-conntrack-Bound-nf_conntrack-sysctl-writes.patch
 	patches.suse/netfilter-fib-avoid-lookup-if-socket-is-available.patch
 	patches.suse/netfilter-socket-Lookup-orig-tuple-for-IPv6-SNAT.patch
 	patches.suse/netfilter-nf_tables-Only-use-nf_skip_indirect_calls-when-M.patch
