netfilter: nft_exthdr: fix offset with ipv4_find_option() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -6279,6 +6279,7 @@
 	patches.suse/msft-hv-3170-net-mana-cleanup-mana-struct-after-debugfs_remove.patch
 	patches.suse/netfilter-nf_conncount-Fully-initialize-struct-nf_co.patch
 	patches.suse/selftests-netfilter-skip-br_netfilter-queue-tests-if.patch
+	patches.suse/netfilter-nft_exthdr-fix-offset-with-ipv4_find_option.patch
 	patches.suse/clk-samsung-gs101-fix-synchronous-external-abort-in-.patch
 	patches.suse/clk-samsung-update-PLL-locktime-for-PLL142XX-used-on.patch
 	patches.suse/drm-amdgpu-display-Allow-DCC-for-video-formats-on-GF.patch
