kabi: restore layout of struct page_counter (jsc#PED-12551).

--- a/series.conf
+++ b/series.conf
@@ -33159,6 +33159,7 @@
 	patches.kabi/serial-mctrl_gpio-split-disable_ms-into-sync-and-no_.patch
 	patches.kabi/PCI-endpoint-Retain-fixed-size-BAR-size-as-well-as-a.patch
 	patches.kabi/kabi-restore-layout-of-struct-mem_control.patch
+	patches.kabi/kabi-restore-layout-of-struct-page_counter.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
