--- a/series.conf
+++ b/series.conf
@@ -31368,6 +31368,7 @@
 	patches.suse/md-raid10-wait-barrier-before-returning-discard-request-wi.patch
 	patches.suse/nvme-pci-remove-stale-comment.patch
 	patches.suse/nvmet-fc-Remove-unused-functions.patch
+	patches.suse/ata-libata-eh-Do-not-use-ATAPI-DMA-for-a-device-limi.patch
 	patches.suse/ahci-add-PCI-ID-for-Marvell-88SE9215-SATA-Controller.patch
 	patches.suse/ata-libata-Fix-NCQ-Non-Data-log-not-supported-print.patch
 	patches.suse/scsi-st-Restore-some-drive-settings-after-reset.patch
