--- a/series.conf
+++ b/series.conf
@@ -6674,6 +6674,7 @@
 	patches.suse/cpufreq-amd-pstate-Pass-min-max_limit_perf-as-min-max_perf-to-amd_pstate_update.patch
 	patches.suse/cpufreq-amd-pstate-Convert-all-perf-values-to-u8.patch
 	patches.suse/cpufreq-amd-pstate-Modularize-perf-freq-conversion.patch
+	patches.suse/cpufreq-amd-pstate-Remove-the-unnecessary-cpufreq_update_policy-call.patch
 	patches.suse/cpufreq-amd-pstate-Add-missing-NULL-ptr-check-in-amd.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
