--- a/series.conf
+++ b/series.conf
@@ -6677,6 +6677,7 @@
 	patches.suse/cpufreq-amd-pstate-Remove-the-unnecessary-cpufreq_update_policy-call.patch
 	patches.suse/cpufreq-amd-pstate-Add-missing-NULL-ptr-check-in-amd.patch
 	patches.suse/cpufreq-amd-pstate-Use-scope-based-cleanup-for-cpufreq_policy-refs.patch
+	patches.suse/cpufreq-amd-pstate-Remove-the-unncecessary-driver_lock-in-amd_pstate_update_limits.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
 	patches.suse/cpuidle-menu-Tweak-threshold-use-in-get_typical_interval.patch
