--- a/series.conf
+++ b/series.conf
@@ -6676,6 +6676,7 @@
 	patches.suse/cpufreq-amd-pstate-Modularize-perf-freq-conversion.patch
 	patches.suse/cpufreq-amd-pstate-Remove-the-unnecessary-cpufreq_update_policy-call.patch
 	patches.suse/cpufreq-amd-pstate-Add-missing-NULL-ptr-check-in-amd.patch
+	patches.suse/cpufreq-amd-pstate-Use-scope-based-cleanup-for-cpufreq_policy-refs.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
 	patches.suse/cpuidle-menu-Tweak-threshold-use-in-get_typical_interval.patch
