--- a/series.conf
+++ b/series.conf
@@ -6671,6 +6671,7 @@
 	patches.suse/ACPI-HED-Always-initialize-before-evged.patch
 	patches.suse/cpufreq-amd-pstate-Modify-the-min_perf-calculation-in-adjust_perf-callback.patch
 	patches.suse/cpufreq-amd-pstate-Remove-the-redundant-des_perf-clamping-in-adjust_perf.patch
+	patches.suse/cpufreq-amd-pstate-Pass-min-max_limit_perf-as-min-max_perf-to-amd_pstate_update.patch
 	patches.suse/cpufreq-amd-pstate-Add-missing-NULL-ptr-check-in-amd.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
