kABI fixes for struct memory_block changes (bsc#1235515,jsc#PED-12731).

--- a/series.conf
+++ b/series.conf
@@ -53959,6 +53959,7 @@
 	patches.kabi/kABI-fix-for-net-Remove-RTNL-dance-for-SIOCBRADDIF-a.patch
 	patches.kabi/serial-mctrl_gpio-split-disable_ms-into-sync-and-no_.patch
 	patches.kabi/PCI-endpoint-Retain-fixed-size-BAR-size-as-well-as-a.patch
+	patches.kabi/kABI-fixes-for-struct-memory_block-changes.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
