--- a/series.conf
+++ b/series.conf
@@ -6697,6 +6697,7 @@
 	patches.suse/cpufreq-amd-pstate-Drop-debug-statements-for-policy-setting.patch
 	patches.suse/cpufreq-amd-pstate-Rework-CPPC-enabling.patch
 	patches.suse/cpufreq-amd-pstate-Stop-caching-EPP.patch
+	patches.suse/cpufreq-amd-pstate-Drop-actions-in-amd_pstate_epp_cpu_offline.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
 	patches.suse/cpuidle-menu-Tweak-threshold-use-in-get_typical_interval.patch
