--- a/series.conf
+++ b/series.conf
@@ -6696,6 +6696,7 @@
 	patches.suse/cpufreq-amd-pstate-Update-cppc_req_cached-for-shared-mem-EPP-writes.patch
 	patches.suse/cpufreq-amd-pstate-Drop-debug-statements-for-policy-setting.patch
 	patches.suse/cpufreq-amd-pstate-Rework-CPPC-enabling.patch
+	patches.suse/cpufreq-amd-pstate-Stop-caching-EPP.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
 	patches.suse/cpuidle-menu-Tweak-threshold-use-in-get_typical_interval.patch
