--- a/series.conf
+++ b/series.conf
@@ -6685,6 +6685,7 @@
 	patches.suse/cpufreq-amd-pstate-Move-perf-values-into-a-union.patch
 	patches.suse/cpufreq-amd-pstate-Overhaul-locking.patch
 	patches.suse/cpufreq-amd-pstate-Drop-cppc_cap1_cached.patch
+	patches.suse/cpufreq-amd-pstate-ut-Use-_free-macro-to-free-put-policy.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
 	patches.suse/cpuidle-menu-Tweak-threshold-use-in-get_typical_interval.patch
