--- a/series.conf
+++ b/series.conf
@@ -6680,6 +6680,7 @@
 	patches.suse/cpufreq-amd-pstate-Remove-the-unncecessary-driver_lock-in-amd_pstate_update_limits.patch
 	patches.suse/cpufreq-amd-pstate-Fix-the-clamping-of-perf-values.patch
 	patches.suse/cpufreq-amd-pstate-Invalidate-cppc_req_cached-during-suspend.patch
+	patches.suse/cpufreq-amd-pstate-Show-a-warning-when-a-CPU-fails-to-setup.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
 	patches.suse/cpuidle-menu-Tweak-threshold-use-in-get_typical_interval.patch
