cpufreq/amd-pstate-ut: Run on all of the correct CPUs (jsc#PED-13164).

--- a/series.conf
+++ b/series.conf
@@ -6688,6 +6688,7 @@
 	patches.suse/cpufreq-amd-pstate-ut-Use-_free-macro-to-free-put-policy.patch
 	patches.suse/cpufreq-amd-pstate-ut-Allow-lowest-nonlinear-and-lowest-to-be-the-same.patch
 	patches.suse/cpufreq-amd-pstate-ut-Drop-SUCCESS-and-FAIL-enums.patch
+	patches.suse/cpufreq-amd-pstate-ut-Run-on-all-of-the-correct-CPUs.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
 	patches.suse/cpuidle-menu-Tweak-threshold-use-in-get_typical_interval.patch
