--- a/series.conf
+++ b/series.conf
@@ -6687,6 +6687,7 @@
 	patches.suse/cpufreq-amd-pstate-Drop-cppc_cap1_cached.patch
 	patches.suse/cpufreq-amd-pstate-ut-Use-_free-macro-to-free-put-policy.patch
 	patches.suse/cpufreq-amd-pstate-ut-Allow-lowest-nonlinear-and-lowest-to-be-the-same.patch
+	patches.suse/cpufreq-amd-pstate-ut-Drop-SUCCESS-and-FAIL-enums.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
 	patches.suse/cpuidle-menu-Tweak-threshold-use-in-get_typical_interval.patch
