--- a/series.conf
+++ b/series.conf
@@ -6681,6 +6681,7 @@
 	patches.suse/cpufreq-amd-pstate-Fix-the-clamping-of-perf-values.patch
 	patches.suse/cpufreq-amd-pstate-Invalidate-cppc_req_cached-during-suspend.patch
 	patches.suse/cpufreq-amd-pstate-Show-a-warning-when-a-CPU-fails-to-setup.patch
+	patches.suse/cpufreq-amd-pstate-Drop-min-and-max-cached-frequencies.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
 	patches.suse/cpuidle-menu-Tweak-threshold-use-in-get_typical_interval.patch
