--- a/series.conf
+++ b/series.conf
@@ -6695,6 +6695,7 @@
 	patches.suse/cpufreq-amd-pstate-Move-all-EPP-tracing-into-_update_perf-and-_set_epp-functions.patch
 	patches.suse/cpufreq-amd-pstate-Update-cppc_req_cached-for-shared-mem-EPP-writes.patch
 	patches.suse/cpufreq-amd-pstate-Drop-debug-statements-for-policy-setting.patch
+	patches.suse/cpufreq-amd-pstate-Rework-CPPC-enabling.patch
 	patches.suse/cpuidle-menu-Drop-a-redundant-local-variable.patch
 	patches.suse/cpuidle-menu-Use-one-loop-for-average-and-variance-computations.patch
 	patches.suse/cpuidle-menu-Tweak-threshold-use-in-get_typical_interval.patch
