ata: Fix typos in the comment (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -75,6 +75,7 @@
 	patches.suse/0002-btrfs-unify-to-use-writer-locks-for-subpage-locking.patch
 	patches.suse/0003-btrfs-rename-btrfs_folio_-set-start-end-_writer_lock.patch
 	patches.suse/btrfs-simplify-range-tracking-in-cow_file_range.patch
+	patches.suse/ata-Fix-typos-in-the-comment.patch
 	patches.suse/block-move-iostat-check-into-blk_acount_io_start.patch
 	patches.suse/block-remove-redundant-passthrough-check-in-blk_mq_n.patch
 	patches.suse/block-remove-req-part-check-for-stats-accounting.patch
