exit: fix the usage of delay_group_leader->exit_code in do_notify_parent() and pidfs_exit() (jsc#PED-13113).

--- a/series.conf
+++ b/series.conf
@@ -7738,6 +7738,7 @@
 	patches.suse/ACPI-processor-idle-return-an-error-if-both-P_LVL-2-.patch
 	patches.suse/ACPI-resource-Skip-IRQ-override-on-ASUS-Vivobook-14-.patch
 	patches.suse/exec-fix-the-racy-usage-of-fs_struct-in_exec.patch
+	patches.suse/exit-fix-the-usage-of-delay_group_leader-exit_code-in-do_n.patch
 	patches.suse/fs-ntfs3-Prevent-integer-overflow-in-hdr_first_de.patch
 	patches.suse/NFSv4-Don-t-trigger-uneccessary-scans-for-return-on-close-delegations.patch
 	patches.suse/NFSv4-Avoid-unnecessary-scans-of-filesystems-for-returning-delegations.patch
