- pidfs: ensure that PIDFS_INFO_EXIT is available (jsc#PED-13113). - blacklist.conf: Guard against unused prerequisite

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -384,3 +384,4 @@ f92bb7436802f8eb7ee72dc911a33c8897fde366 # CVE-2025-37977 bsc#1243510
 0e8acffc1be10d53e909b3aa43831d6c2d25a579 # git-fix fixes code not present
 d6aa0c178bf81f30ae4a780b2bca653daa2eb633 # git-fix needs missing infrastructure
 2d900efff915fe24c3948d28eef9078953d87fec # git-fix needs previous patches
+b3caba8f7a34a2bbaf45ffc6ff3a49b70afeb192 # refresh patches.suse/pidfs-ensure-that-PIDFS_INFO_EXIT-is-available.patch before this patch
