--- a/series.conf
+++ b/series.conf
@@ -6447,6 +6447,7 @@
 	patches.suse/pidfs-use-private-inode-slab-cache.patch
 	patches.suse/pidfs-record-exit-code-and-cgroupid-at-exit.patch
 	patches.suse/pidfs-allow-to-retrieve-exit-information.patch
+	patches.suse/pidfs-ensure-that-PIDFS_INFO_EXIT-is-available.patch
 	patches.suse/pidfs-improve-multi-threaded-exec-and-premature-thread-gro.patch
 	patches.suse/block-bdev-enable-large-folio-support-for-large-logical-bl.patch
 	patches.suse/init-add-initramfs_internal.h.patch
