ata: ahci: Disallow LPM for ASUSPRO-D840SA motherboard (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9544,6 +9544,7 @@
 	patches.suse/platform-x86-dell_rbu-Stop-overwriting-data-buffer.patch
 	patches.suse/ata-pata_via-Force-PIO-for-ATAPI-devices-on-VT6415-V.patch
 	patches.suse/ata-ahci-Use-correct-BIOS-build-date-for-ThinkPad-W5.patch
+	patches.suse/ata-ahci-Disallow-LPM-for-ASUSPRO-D840SA-motherboard.patch
 	patches.suse/workqueue-Initialize-wq_isolated_cpumask-in-workqueue_init.patch
 	patches.suse/hwmon-ftsteutates-Fix-TOCTOU-race-in-fts_read.patch
 	patches.suse/hwmon-occ-Rework-attribute-registration-for-stack-us.patch
