cpufreq/amd-pstate: Enable ITMT support after initializing core rankings (jsc#PED-13164).

--- a/series.conf
+++ b/series.conf
@@ -8156,6 +8156,7 @@
 	patches.suse/nvmet-pci-epf-cleanup-link-state-management.patch
 	patches.suse/kunit-qemu_configs-SH-Respect-kunit-cmdline.patch
 	patches.suse/cpufreq-amd-pstate-Fix-min_limit-perf-and-freq-updation-for-performance-governor.patch
+	patches.suse/cpufreq-amd-pstate-Enable-ITMT-support-after-initializing-core-rankings.patch
 	patches.suse/Documentation-PM-runtime-Fix-a-reference-to-pm_runti.patch
 	patches.suse/string-Add-load_unaligned_zeropad-code-path-to-sized.patch
 	patches.suse/PCI-MSI-Add-an-option-to-write-MSIX-ENTRY_DATA-befor.patch
