tracing: Fix compilation warning on arm32 (bsc#1243551).

--- a/series.conf
+++ b/series.conf
@@ -9093,6 +9093,7 @@
 	patches.suse/platform-x86-amd-hsmp-Report-power-via-hwmon-sensors.patch
 	patches.suse/platform-x86-amd-hsmp-acpi-Add-sysfs-files-to-display-HSMP.patch
 	patches.suse/platform-x86-amd-hsmp-fix-building-with-CONFIG_HWMON-m.patch
+	patches.suse/tracing-Fix-compilation-warning-on-arm32.patch
 	patches.suse/scsi-lpfc-Use-memcpy-for-BIOS-version.patch
 	patches.suse/scsi-hisi_sas-Call-I_T_nexus-after-soft-reset-for-SATA-dis.patch
 	patches.suse/scsi-qla2xxx-Remove-unused-qlt_free_qfull_cmds.patch
