blacklist.conf: not a fix

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -906,3 +906,4 @@ c2c707bd45426df6edc5cf9f5f9fd857bd9926a9 # cleanup
 f92bb7436802f8eb7ee72dc911a33c8897fde366 # CVE-2025-37977 bsc#1243510
 cd3c93167da0e760b5819246eae7a4ea30fd014b # refactoring, also 20250611131241.6ff7cf5d@kernel.org
 ee62ce7a1d909ccba0399680a03c2dee83bcae95 # mostly only required for broken hardware, also see 20250611131241.6ff7cf5d@kernel.org
+bc07fb417007b323d34651be20b9135480a947dc # cleanup, not a fix
