mm/memory_hotplug: fix memmap_on_memory sysfs value retrieval (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26117,6 +26117,7 @@
 	patches.suse/kexec-do-syscore_shutdown-in-kernel_kexec.patch
 	patches.suse/efi-disable-mirror-feature-during-crashkernel.patch
 	patches.suse/kernel-crash_core.c-make-__crash_hotplug_lock-static.patch
+	patches.suse/mm-memory_hotplug-fix-memmap_on_memory-sysfs-value-r.patch
 	patches.suse/selftests-mm-hugepage-vmemmap-fails-on-64K-page-size.patch
 	patches.suse/ubifs-Check-c-dirty_-n-p-n_cnt-and-c-nroot-state-under-c-lp_mutex.patch
 	patches.suse/ubifs-ubifs_symlink-Fix-memleak-of-inode-i_link-in-error-path.patch
